[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RISEAnalysisPackage"
version = "0.2"
dependencies = [
    "numpy",
    "sympy",
    "scipy",
    "pandas",
    "polars",
    "matplotlib",
    "lmfit",
    "numba",
    "openpyxl",
    "pyarrow>=8.0"
]
